GEE-41 | add dynamic table names deduction to TestDbService