@@ -1,20 +1,22 @@
 package pl.edu.pw.elka.paprykaisalami.geeruh.support;
 
 import lombok.AllArgsConstructor;
+import org.hibernate.envers.Audited;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import javax.persistence.EntityManager;
 import javax.persistence.EntityManagerFactory;
+import javax.persistence.Table;
 import javax.persistence.metamodel.EntityType;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @AllArgsConstructor
 @Service
 public class TestDbService {
-
-    EntityManagerFactory entityManagerFactory;
 
     EntityManager entityManager;
 
@@ -31,12 +33,19 @@ public class TestDbService {
     }
 
     private List<String> tableNames() {
-        return List.of("Issues", "Issues_AUD");
-//        var metamodel = entityManagerFactory.getMetamodel();
-//        return metamodel.getEntities().stream()
-//                .map(EntityType::getJavaType)
-//                .map(clazz -> clazz.getAnnotation(Table.class))
-//                .map(Table::name)
-//                .collect(Collectors.toList());
+        var entityTypes = entityManager.getMetamodel()
+                .getEntities().stream()
+                .map(EntityType::getJavaType)
+                .toList();
+        var directTableNames = entityTypes.stream()
+                .map(clazz -> clazz.getAnnotation(Table.class))
+                .filter(Objects::nonNull)
+                .map(Table::name);
+        var auditedTableNames = entityTypes.stream()
+                .filter(clazz -> clazz.getAnnotation(Audited.class) != null)
+                .map(clazz -> clazz.getAnnotation(Table.class))
+                .map(Table::name)
+                .map(tableName -> tableName + "_AUD");
+        return Stream.concat(directTableNames, auditedTableNames).toList();
     }
 }
